--- a/index.ipynb
+++ b/index.ipynb
@@ -50,13 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "Base = None"
+    "from sqlalchemy import *\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "Base = declarative_base()"
    ]
   },
   {
@@ -70,10 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy.orm import relationship"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,50 +109,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Customer(Base):\n",
-    "    __tablename__ = None\n",
+    "    __tablename__ = 'customer'\n",
     "    \n",
-    "    id = None\n",
-    "    name = None\n",
-    "    cart_id = None\n",
+    "    id = Column(Integer, primary_key = True)\n",
+    "    name = Column(String)\n",
+    "    cart_id = Column(Integer, ForeignKey('shoppingCart.id'))\n",
     "    \n",
     "    # Create 1-to-1 relationship with ShoppingCart, as shown in the SQLAlchemy documentation\n",
-    "    shoppingCart = None\n"
+    "    shoppingCart = relationship(\"ShoppingCart\", back_populates= \"customer\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ShoppingCart(Base):\n",
-    "    __tablename__ = None\n",
+    "    __tablename__ = 'shoppingCart'\n",
     "    \n",
-    "    id = None\n",
-    "    item_id = None\n",
+    "    id = Column(Integer, primary_key = True)\n",
+    "    item_id = Column(Integer, ForeignKey('Item.id'))\n",
     "    # Create 1-to-1 relationship with Customer\n",
-    "    customer = None\n",
+    "    customer = relationship(\"Customer\", uselist=False, back_populates= \"shoppingCart\")\n",
     "    # Create 1-to-many relationship with Item\n",
-    "    items = None"
+    "    items = relationship(\"Item\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Item(Base):\n",
-    "    __tablename__ = None\n",
+    "    __tablename__ = 'Item'\n",
     "    \n",
-    "    id = None\n",
-    "    description = None\n",
-    "    price = None"
+    "    id = Column(Integer, primary_key = True)\n",
+    "    description = Column(String)\n",
+    "    price = Column(Float)"
    ]
   },
   {
@@ -171,11 +174,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-11-03 23:52:09,829 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2018-11-03 23:52:09,831 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-11-03 23:52:09,833 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2018-11-03 23:52:09,833 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-11-03 23:52:09,836 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"customer\")\n",
+      "2018-11-03 23:52:09,837 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-11-03 23:52:09,839 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"shoppingCart\")\n",
+      "2018-11-03 23:52:09,840 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-11-03 23:52:09,841 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"Item\")\n",
+      "2018-11-03 23:52:09,844 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-11-03 23:52:09,847 INFO sqlalchemy.engine.base.Engine \n",
+      "CREATE TABLE \"Item\" (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tdescription VARCHAR, \n",
+      "\tprice FLOAT, \n",
+      "\tPRIMARY KEY (id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2018-11-03 23:52:09,848 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-11-03 23:52:09,852 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2018-11-03 23:52:09,853 INFO sqlalchemy.engine.base.Engine \n",
+      "CREATE TABLE \"shoppingCart\" (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\titem_id INTEGER, \n",
+      "\tPRIMARY KEY (id), \n",
+      "\tFOREIGN KEY(item_id) REFERENCES \"Item\" (id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2018-11-03 23:52:09,854 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-11-03 23:52:09,857 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2018-11-03 23:52:09,859 INFO sqlalchemy.engine.base.Engine \n",
+      "CREATE TABLE customer (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tname VARCHAR, \n",
+      "\tcart_id INTEGER, \n",
+      "\tPRIMARY KEY (id), \n",
+      "\tFOREIGN KEY(cart_id) REFERENCES \"shoppingCart\" (id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2018-11-03 23:52:09,860 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-11-03 23:52:09,864 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+     ]
+    }
+   ],
    "source": [
-    "engine = None\n",
+    "engine = create_engine('sqlite:///shopping_cart.db', echo=True)\n",
+    "Base.metadata.create_all(engine)\n",
     "\n"
    ]
   },
@@ -194,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,9 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "customer1.id, item1.id"
    ]
@@ -241,14 +307,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "Session = None\n",
-    "\n",
-    "session = None"
+    "from sqlalchemy.orm import sessionmaker\n",
+    "Session = sessionmaker()\n",
+    "session = Session(bind=engine)"
    ]
   },
   {
@@ -262,11 +327,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "session.add_all(None)"
+    "session.add_all([customer1, cart1, item1])"
    ]
   },
   {
@@ -278,10 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IdentitySet([<__main__.Customer object at 0x7fbf6ec1ca90>, <__main__.ShoppingCart object at 0x7fbf6ec1c898>, <__main__.Item object at 0x7fbf6ec1cbe0>])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.new"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,10 +372,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-11-03 23:55:11,339 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2018-11-03 23:55:11,342 INFO sqlalchemy.engine.base.Engine INSERT INTO \"Item\" (description, price) VALUES (?, ?)\n",
+      "2018-11-03 23:55:11,427 INFO sqlalchemy.engine.base.Engine ('widget', 9.99)\n",
+      "2018-11-03 23:55:11,431 INFO sqlalchemy.engine.base.Engine INSERT INTO \"shoppingCart\" (item_id) VALUES (?)\n",
+      "2018-11-03 23:55:11,432 INFO sqlalchemy.engine.base.Engine (1,)\n",
+      "2018-11-03 23:55:11,434 INFO sqlalchemy.engine.base.Engine INSERT INTO customer (name, cart_id) VALUES (?, ?)\n",
+      "2018-11-03 23:55:11,436 INFO sqlalchemy.engine.base.Engine ('Jane', 1)\n",
+      "2018-11-03 23:55:11,447 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+     ]
+    }
+   ],
+   "source": [
+    "session.commit()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,10 +405,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-11-03 23:55:53,510 INFO sqlalchemy.engine.base.Engine SELECT \"Item\".id AS \"Item_id\", \"Item\".description AS \"Item_description\", \"Item\".price AS \"Item_price\" \n",
+      "FROM \"Item\" \n",
+      "WHERE \"Item\".id = ?\n",
+      "2018-11-03 23:55:53,527 INFO sqlalchemy.engine.base.Engine (1,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 'widget')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer1.id, item1.description"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -341,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
